Squash-merged current-terminal-indev (buildable yet still buggy)